@@ -1,4 +1,7 @@
 2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ src/transaction_base.cxx:
+ - gcc 3.3 stumbles over foo_gate(bar).splat()
+2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
  autogen.sh:
  - Get ABI version as well as library version.
  - Single "substitute" function for configure.ac and version header.
